# elsa-coding-challenges

./: .gitignore  README.md  challenge.md
src/: .env.template  .flake8  conftest.py  entrypoint.sh  newrelic.ini  pyproject.toml  pytest.ini  user_score.Dockerfile
src/core/constants/: queue.py  quiz.py
src/core/migrations/: 0001_initial.py
src/core/models/: base.py  quiz.py
src/core/tests/factories/: quiz.py
src/core/utils/: api.py  cache.py  database.py  message_queue.py  retry.py  service.py
src/main/: asgi.py  sentry.py  settings.py  unittest.py  urls.py  wsgi.py
src/user_score/: apps.py
src/user_score/apis/: health.py
src/user_score/apis/urls/: restful_v1.py
src/user_score/apis/v1/quiz/serializers/: answer_question.py
src/user_score/apis/v1/quiz/views/: answer_question.py
src/user_score/services/quiz/: submit_answer.py
src/user_score/tests/apis/: test_health.py
src/user_score/tests/apis/v1/quiz/: test_answer_question.py
src/user_score/tests/services/quiz/: test_submit_quiz_answer.py
system_design/: system_design.md
